<resources>
    <string name="app_name" translatable="false">Template</string>
    <string name="loading">Loading</string>
    <string name="reading_hash">Reading Hash</string>
    <string name="retrieving_role">Retrieving user information</string>
    <string name="changing_layout">Changing layout</string>

    <string name="welcome_back">Welcome back!</string> <!-- translatable="true" -->
    <string name="welcome">Welcome!</string>

    <string name="prompt_surname">Surname</string>
    <string name="prompt_name">Name</string>
    <string name="prompt_patronymic">Patronymic (if available)</string>
    <string name="prompt_telegram_tag">Your Telegram Tag</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_role">Role</string>
    <string name="prompt_group">Group</string>
    <string name="prompt_points_user">Points earned</string>
    <string name="prompt_completed">Requests completed</string>
    <string name="prompt_request_id">Request ID</string>
    <string name="prompt_id_user">ID to add / remove</string>

    <string name="prompt_address">Address</string>
    <string name="prompt_date">Days to complete (number)</string>
    <string name="prompt_people">People needed (number)</string>
    <string name="prompt_points">Points given (number)</string>
    <string name="prompt_description">Description</string>

    <string name="signup_hint">Don\'t have an account yet?</string>
    <string name="signin_hint">Already have an account?</string>
    <string name="action_sign_up">Sign up</string>
    <string name="action_sign_in">Sign in</string>
    <string name="signup_failed">Sign Up failed. Please try again.</string>

    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>

    <string name="dev_welcome">Welcome to Devs menu</string>
    <string name="org_devs">Developers</string>
    <string name="to_promote_page">Promote Page</string>
    <string name="to_demote_page">Demote Page</string>
    <string name="to_admin_menu_page">Admin Menu</string>
    <string name="refresh">Refresh</string>
    <string name="org_orgs">Organizations</string>


    <string name="createuser">Create User</string>
    <string name="getuser">Get User</string>
    <string name="get_button">Get</string>
    <string name="getusers">Get Users</string>
    <string name="changeuser">Change User</string>
    <string name="deleteuser">Delete User</string>
    <string name="tofeedpage">Feed Page</string>
    <string name="tocreaterequestpage">Create Request</string>
    <string name="doyouwanttodelete">Do you want to delete the user given?</string>


    <string name="logout">Log out</string>
    <string name="goback">Go Back</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="title_activity_dev_control_dev">DevControlDev</string>
    <string name="action_settings">Settings</string>
    <string name="myprofile">My Profile</string>

    <!-- action strings -->
    <string name="change">Change</string>
    <string name="delete">Delete</string>
    <string name="mark">Mark</string>
    <string name="completed">Completed</string>
    <string name="add_or_remove">Add / Remove</string>
    <string name="send">Send</string>
    <string name="subscribe">Subscribe</string>
    <string name="unsubscribe">Unsubscribe</string>
    <string name="create">Create</string>
    <string name="promote">Promote</string>
    <string name="demote">Demote</string>
    <string name="registerdev">Register new developer</string>


    <string name="title_activity_login" translatable="false">Log in</string>

    <!-- now some requests strings -->
    <string name="id_string">ID: </string>
    <string name="email_string">Email: </string>
    <string name="name_string">Name: </string>
    <string name="address_string">Address: </string>
    <string name="upload_date_string">Uploaded: </string>
    <string name="deadline_date_string">Is due: </string>
    <string name="people_string">People: </string>
    <string name="description_string">Description:</string>


</resources>