<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreateUser">

	<EditText
		android:id="@+id/create_surname"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:ems="10"
		android:hint="@string/prompt_surname"
		android:inputType="text"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toTopOf="parent"
		app:layout_constraintVertical_bias="0.3" />

	<Button
		android:id="@+id/create_button"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:onClick="create"
		android:text="@string/create"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/create_password"
		app:layout_constraintVertical_bias="0.1" />

	<EditText
		android:id="@+id/create_password"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:ems="10"
		android:hint="@string/prompt_password"
		android:inputType="textPassword"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toTopOf="parent"
		app:layout_constraintVertical_bias="0.7" />

	<EditText
		android:id="@+id/create_email"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:ems="10"
		android:hint="@string/prompt_email"
		android:inputType="textEmailAddress"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toTopOf="parent"
		app:layout_constraintVertical_bias="0.6" />

	<EditText
		android:id="@+id/create_patronymic"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:ems="10"
		android:hint="@string/prompt_patronymic"
		android:inputType="text"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toTopOf="parent"
		app:layout_constraintVertical_bias="0.4" />

	<EditText
		android:id="@+id/create_name"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:ems="10"
		android:hint="@string/prompt_name"
		android:inputType="text"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintHorizontal_bias="0.497"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toTopOf="parent"
		app:layout_constraintVertical_bias="0.2" />

	<EditText
		android:id="@+id/create_telegram"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:ems="10"
		android:hint="@string/prompt_telegram_tag"
		android:inputType="text"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toTopOf="parent"
		app:layout_constraintVertical_bias="0.5" />
</androidx.constraintlayout.widget.ConstraintLayout>