<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="318dp"
    android:layout_marginLeft="48dp"
    android:layout_marginRight="48dp"
    android:gravity="center_vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="8dp"
    app:cardElevation="5dp"
    app:cardUseCompatPadding="true">
    <TextView
        android:id="@+id/id_string"
        android:layout_marginTop="15dp"
        android:layout_marginStart="15dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/id_string" />

    <TextView
        android:id="@+id/id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="120dp"
        android:layout_marginTop="15dp"
        android:text="" />

    <TextView
        android:id="@+id/address_string"
        android:layout_marginTop="35dp"
        android:layout_marginStart="15dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/address_string" />

    <TextView
        android:id="@+id/address"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="120dp"
        android:layout_marginTop="35dp"
        android:text="" />

    <TextView
        android:id="@+id/upload_date_string"
        android:layout_marginTop="75dp"
        android:layout_marginStart="15dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/upload_date_string" />
    <TextView
        android:id="@+id/upload"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="120dp"
        android:layout_marginTop="75dp"
        android:text="" />

    <TextView
        android:id="@+id/deadline_string"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="95dp"
        android:text="@string/deadline_date_string" />
    <TextView
        android:id="@+id/deadline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="120dp"
        android:layout_marginTop="95dp"
        android:text="" />

    <TextView
        android:id="@+id/description_string"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="115dp"
        android:text="@string/description_string"
        android:textSize="11sp" />

    <TextView
        android:id="@+id/description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="125dp"
        android:text=""
        android:textSize="14sp" />

    <Button
        android:id="@+id/admin_delete_button"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="134dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="0dp"
        android:layout_marginTop="194dp"
        android:text="@string/delete" />

    <TextView
        android:id="@+id/counter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="134dp"
        android:layout_marginTop="194dp"
        android:fontFamily="sans-serif-black"
        android:text="0/X"
        android:textSize="32sp" />

    <Button
        android:id="@+id/admin_mark_as_completed_button"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="134dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="0dp"
        android:layout_marginTop="250dp"
        android:text="@string/mark" />
</com.google.android.material.card.MaterialCardView>