<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".StudentFeedPage">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewPublicRequests"
        android:layout_width="420dp"
        android:layout_height="523dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/student_refresh_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="refresh"
        android:text="@string/refresh"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/recyclerViewPublicRequests" />

    <Button
        android:id="@+id/student_to_my_profile_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="toMyProfilePage"
        android:text="@string/myprofile"
        app:layout_constraintBottom_toTopOf="@+id/recyclerViewPublicRequests"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/logout_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="logout"
        android:text="@string/logout"
        app:layout_constraintBottom_toTopOf="@+id/recyclerViewPublicRequests"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/student_to_my_profile_button"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>